url update in footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       <a href="https://instagram.com" target="_blank">Marie Aldebert</a>, is
       open-sourced on
       <a href="https://github.com/maldebert" target="_blank">GitHub</a> and
-      hosted on Netlify
+      hosted on
+      <a href="https://github.com/maldebert/My-Weather-App" target="_blank"
+        >Netlify</a
+      >
     </footer>
   </body>
 </html>
