--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <body>
     <footer>
       This project was coded by
-      <a href="https://instagram.com" target="_blank">Marie Aldebert</a>, is
-      open-sourced on
-      <a href="https://github.com/maldebert" target="_blank">GitHub</a> and
-      hosted on
+      <a href="https://github.com/maldebert" target="_blank">Marie Aldebert</a>,
+      is open-sourced on
       <a href="https://github.com/maldebert/My-Weather-App" target="_blank"
+        >GitHub</a
+      >
+      and hosted on
+      <a href="https://weather-app-by-marie.netlify.app" target="_blank"
         >Netlify</a
       >
     </footer>
