--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>My Weather App</title>
   </head>
   <body>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required id="" />
+        <input type="submit" value="search" />
+      </form>
+    </header>
+    <main></main>
     <footer>
       This project was coded by
       <a href="https://github.com/maldebert" target="_blank">Marie Aldebert</a>,
