--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         <input type="submit" value="search" />
       </form>
     </header>
-    <main></main>
+    <main>
+      <h1>Edinburgh</h1>
+      <p>
+        Friday 8:24, mostly cloudy
+        <br />
+        Humidity: 87%, Wind: 12 mph
+      </p>
+    </main>
     <footer>
       This project was coded by
       <a href="https://github.com/maldebert" target="_blank">Marie Aldebert</a>,
