--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     </header>
     <main>
       <h1>Edinburgh</h1>
-      <p>
-        Friday 8:24, mostly cloudy
-        <br />
-        Humidity: 87%, Wind: 12 mph
-      </p>
+      <div>
+        <p>
+          Friday 8:24, mostly cloudy
+          <br />
+          Humidity: 87%, Wind: 12 mph
+        </p>
+      </div>
+      <div>☁️ 3°C</div>
     </main>
     <footer>
       This project was coded by
