--- a/index.html
+++ b/index.html
@@ -11,34 +11,36 @@
     <title>My Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." required id="" />
-        <input type="submit" value="search" />
-      </form>
-    </header>
-    <main>
-      <h1>Edinburgh</h1>
-      <div>
-        <p>
-          Friday 8:24, mostly cloudy
-          <br />
-          Humidity: 87%, Wind: 12 mph
-        </p>
-      </div>
-      <div>☁️ 3°C</div>
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/maldebert" target="_blank">Marie Aldebert</a>,
-      is open-sourced on
-      <a href="https://github.com/maldebert/My-Weather-App" target="_blank"
-        >GitHub</a
-      >
-      and hosted on
-      <a href="https://weather-app-by-marie.netlify.app" target="_blank"
-        >Netlify</a
-      >
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required id="" />
+          <input type="submit" value="search" />
+        </form>
+      </header>
+      <main>
+        <h1>Edinburgh</h1>
+        <div>
+          <p>
+            Friday 8:24, mostly cloudy
+            <br />
+            Humidity: 87%, Wind: 12 mph
+          </p>
+        </div>
+        <div>☁️ 3°C</div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/maldebert" target="_blank">Marie Aldebert</a
+        >, is open-sourced on
+        <a href="https://github.com/maldebert/My-Weather-App" target="_blank"
+          >GitHub</a
+        >
+        and hosted on
+        <a href="https://weather-app-by-marie.netlify.app" target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
