--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city..." required id="" />
-          <input type="submit" value="search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city..."
+            class="search-form-input"
+            required
+            id=""
+          />
+          <input type="submit" value="search" class="search-form-button" />
         </form>
       </header>
       <main>
