main section styling part 1

--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
         </form>
       </header>
       <main>
-        <h1>Edinburgh</h1>
-        <div>
-          <p>
-            Friday 8:24, mostly cloudy
-            <br />
-            Humidity: 87%, Wind: 12 mph
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Edinburgh</h1>
+            <p class="weather-app-details">
+              Friday 8:24, mostly cloudy
+              <br />
+              Humidity: <strong>87%</strong>, Wind: <strong>12 mph</strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature">☁️ 3°C</div>
         </div>
-        <div>☁️ 3°C</div>
       </main>
       <footer>
         This project was coded by
