--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
               Humidity: <strong>87%</strong>, Wind: <strong>12 mph</strong>
             </p>
           </div>
-          <div class="weather-app-temperature">☁️ 3°C</div>
+          <div class="weather-app-icon">☁️</div>
+          <div class="weather-app-temperature">3</div>
+          <div class="weather-app-unit">°C</div>
         </div>
       </main>
       <footer>
