city search engine js

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city..."
             class="search-form-input"
             required
-            id=""
+            id="search-form-input"
           />
           <input type="submit" value="search" class="search-form-button" />
         </form>
@@ -27,7 +27,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Edinburgh</h1>
+            <h1 class="weather-app-city" id="city">Edinburgh</h1>
             <p class="weather-app-details">
               Friday 8:24, mostly cloudy
               <br />
@@ -54,5 +54,6 @@
         >
       </footer>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
