--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">☁️</div>
-            <div class="weather-app-temperature">3</div>
+            <div class="weather-app-temperature" id="temperature">3</div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
