--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="city">Edinburgh</h1>
+            <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
               Friday 8:24, mostly cloudy
               <br />
@@ -37,7 +37,7 @@
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">☁️</div>
-            <div class="weather-app-temperature" id="temperature">3</div>
+            <div class="weather-app-temperature" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
