--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              Friday 8:24, mostly cloudy
+              Friday 8:24, <span id="description"></span>
               <br />
               Humidity: <strong>87%</strong>, Wind: <strong>12 mph</strong>
             </p>
