--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <p class="weather-app-details">
               Friday 8:24, <span id="description"></span>
               <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>12 mph</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
