day and time update

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="weather-app-data">
           <div>
             <h1 class="weather-app-city" id="city"></h1>
-            <p class="weather-app-details">
-              Friday 8:24, <span id="description"></span>
+            <p class="weather-app-details" id="time">
+              <span id="description"></span>
               <br />
               Humidity: <strong id="humidity"></strong>, Wind:
               <strong id="wind-speed"></strong>
