--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <div class="weather-app-data">
           <div>
             <h1 class="weather-app-city" id="city"></h1>
-            <p class="weather-app-details" id="time">
+            <p class="weather-app-details">
+              <span id="time"></span>
               <span id="description"></span>
               <br />
               Humidity: <strong id="humidity"></strong>, Wind:
