--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             <div class="weather-app-temperature" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">Thur 🌧️ 18 12</div>
+            </div>
+          </div>
         </div>
       </main>
       <footer>
