--- a/index.html
+++ b/index.html
@@ -42,9 +42,16 @@
             <div class="weather-app-temperature" id="temperature"></div>
             <div class="weather-app-unit">°C</div>
           </div>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">Thur 🌧️ 18 12</div>
+        </div>
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col-2">
+              <div class="weather-forecast-date">Thur</div>
+              🌧️
+              <div class="weather-forecast-temperature">
+                <span class="weather-forecast-temperature-max">18° </span
+                ><span class="weather-forecast-temperature-min">12°</span>
+              </div>
             </div>
           </div>
         </div>
