--- a/index.html
+++ b/index.html
@@ -43,18 +43,7 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2">
-              <div class="weather-forecast-date">Thur</div>
-              🌧️
-              <div class="weather-forecast-temperature">
-                <span class="weather-forecast-temperature-max">18° </span
-                ><span class="weather-forecast-temperature-min">12°</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer>
         This project was coded by
